Mit Colab erstellt

--- a/2024_12_14_pe_204p100_fibo_subsequences.ipynb
+++ b/2024_12_14_pe_204p100_fibo_subsequences.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1RQOoq1SYbgXrhoVLNCJg",
+      "authorship_tag": "ABX9TyMvyVBlNZYjdTx1+Y+AppBq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -131,8 +131,8 @@
         " \\begin{pmatrix}\n",
         "F_{n-2} \\\\\n",
         "F_{n-1}\n",
-        "\\end{pmatrix}\n",
-        "\\end{align}, \\ k \\geq 0.\n",
+        "\\end{pmatrix} , \\ k \\geq 0.\n",
+        "\\end{align}\n",
         "$$\n"
       ],
       "metadata": {
