Mit Colab erstellt

--- a/mahalanobis.ipynb
+++ b/mahalanobis.ipynb
@@ -17,7 +17,12 @@
         "id": "6546c1e4"
       },
       "source": [
-        "<a id=\"Introduction\"></a>\n",
+        "$\\renewcommand{\\vec}[1]{\\boldsymbol{\\mathbf{#1}}}$\n",
+        "$\\def\\matr#1{\\boldsymbol{\\mathbf{#1}}}$\n",
+        "$\\def\\tp{\\mathsf T}$\n",
+        "$\\newcommand{\\E}{\\mbox{I\\negthinspace E}}$\n",
+        "\n",
+        "\n",
         "# Mahalanobis Distance: Theory, Code, and Benchmarks\n",
         "\n",
         "### Definition\n",
