Mit Colab erstellt

--- a/2025_09_27_online_estimate_cov_mu.ipynb
+++ b/2025_09_27_online_estimate_cov_mu.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMv2MJto86LsdiHFjqayt6T",
+      "authorship_tag": "ABX9TyPIMxcr2HitWKQj+G5Y3LFT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "$\\newcommand{\\deltan}{{\\boldsymbol{\\mathbf{\\Delta}}_n}}$\n",
         "$\\newcommand{\\deltai}{{\\boldsymbol{\\mathbf{\\Delta}}_i}}$\n",
         "$\\newcommand{\\bfdelta}{{\\boldsymbol{\\mathbf{\\Delta}}}}$\n",
-        "$\\newcommand{\\M}{{\\boldsymbol{\\mathbf{\\bar{M} }}}}$\n",
+        "$\\newcommand{\\M}{{\\boldsymbol{\\mathbf{\\bar{M}}}}}$\n",
         "$\\newcommand{\\bfD}{{\\boldsymbol{\\mathbf{D}}}}$\n",
         "$\\newcommand{\\bfI}{{\\boldsymbol{\\mathbf{I}}}}$\n",
         "$\\newcommand{\\bfcX}{{\\boldsymbol{\\mathcal{X}}}}$\n",
@@ -82,19 +82,19 @@
         "Depending on whether **frequency weights** are used, different unbiased estimators of the covariance are appropriate. If each weight $w_i$ represents the count of a data point, the unbiased estimator is  \n",
         "\n",
         "\\begin{align}\n",
-        "\t\\sigmahat &= \\frac{\\M^{(n)}}{W_n - 1}. \\label{eq:UnbiasedCovariance1}\n",
+        "\t\\sigmahat &= \\frac{\\M^{(n)}}{W_n - 1}.\n",
         "\\end{align}\n",
         "\n",
         "Otherwise, the unbiased estimator is given by  \n",
         "\n",
         "\\begin{align}\n",
-        "\t\\sigmahat &= \\frac{\\M^{(n)}}{W_n - W^{(2)}_n / W_n}, \\label{eq:UnbiasedCovariance}\n",
+        "\t\\sigmahat &= \\frac{\\M^{(n)}}{W_n - W^{(2)}_n / W_n},\n",
         "\\end{align}\n",
         "\n",
         "where  \n",
         "\n",
         "\\begin{align}\n",
-        "W^{(2)}_n = \\sum_{i=1}^{n} (w'_i)^2. \\label{eq:UnbiasedCovariance2}\n",
+        "W^{(2)}_n = \\sum_{i=1}^{n} (w'_i)^2.\n",
         "\\end{align}\n"
       ],
       "metadata": {
