Mit Colab erstellt

--- a/2025_09_27_online_estimate_cov_mu.ipynb
+++ b/2025_09_27_online_estimate_cov_mu.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPbAd642t2uWzFJlacL9ZUu",
+      "authorship_tag": "ABX9TyNaawz3pAbGSxEmPujsRwny",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,11 +29,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "$\\newcommand{\\muhat}{{\\boldsymbol{\\mathbf{{\\bar{x}}}}}}$\n",
+        "$\\newcommand{\\muhat}{\\boldsymbol{\\bar{x}}}$\n",
         "$\\newcommand{\\ehat}{{\\boldsymbol{\\mathbf{{\\bar{e}}}}}}$\n",
         "$\\newcommand{\\bsize}{{\\mu}}$\n",
         "$\\newcommand{\\numbatches}{{M}}$\n",
-        "$\\newcommand{\\sigmahat}{{\\boldsymbol{\\mathbf{\\bar{\\Sigma}}}}}$\n",
+        "$\\newcommand{\\sigmahat}{\\bar{\\boldsymbol{\\Sigma}}}$\n",
         "$\\newcommand{\\bfsigma}{{\\boldsymbol{\\mathbf{\\Sigma}}}}$\n",
         "$\\newcommand{\\xn}{{\\boldsymbol{\\mathbf{x}}_n}}$\n",
         "$\\newcommand{\\bfx}{{\\boldsymbol{\\mathbf{x}}}}$\n",
@@ -41,14 +41,14 @@
         "$\\newcommand{\\deltan}{{\\boldsymbol{\\mathbf{\\Delta}}_n}}$\n",
         "$\\newcommand{\\deltai}{{\\boldsymbol{\\mathbf{\\Delta}}_i}}$\n",
         "$\\newcommand{\\bfdelta}{{\\boldsymbol{\\mathbf{\\Delta}}}}$\n",
-        "$\\newcommand{\\M}{{\\boldsymbol{\\mathbf{\\bar{M}}}}}$\n",
+        "$\\newcommand{\\M}{\\bar{\\boldsymbol{M}}}$\n",
         "$\\newcommand{\\bfD}{{\\boldsymbol{\\mathbf{D}}}}$\n",
         "$\\newcommand{\\bfI}{{\\boldsymbol{\\mathbf{I}}}}$\n",
         "$\\newcommand{\\bfcX}{{\\boldsymbol{\\mathcal{X}}}}$\n",
-        "$\\renewcommand{\\vec}[1]{\\boldsymbol{\\mathbf{#1}}}$\n",
+        "$\\renewcommand{\\vec}[1]{\\boldsymbol{#1}}$\n",
         "$\\def\\matr#1{\\boldsymbol{\\mathbf{#1}}}$\n",
         "$\\def\\tp{\\mathsf T}$\n",
-        "$\\newcommand{\\E}{\\mbox{I\\negthinspace E}}$\n",
+        "$\\newcommand{\\E}{\\mathbb{E}}$\n",
         "\n",
         "## Incremental / Online Estimation of the (Inverse) Covariance Matrix and Mean  \n",
         "\n",
