Mit Colab erstellt

--- a/2025_09_27_online_estimate_cov_mu.ipynb
+++ b/2025_09_27_online_estimate_cov_mu.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNaawz3pAbGSxEmPujsRwny",
+      "authorship_tag": "ABX9TyPb/Ch2F/HcI/4G8yezy/qs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,26 +29,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "$\\newcommand{\\muhat}{\\boldsymbol{\\bar{x}}}$\n",
-        "$\\newcommand{\\ehat}{{\\boldsymbol{\\mathbf{{\\bar{e}}}}}}$\n",
-        "$\\newcommand{\\bsize}{{\\mu}}$\n",
-        "$\\newcommand{\\numbatches}{{M}}$\n",
-        "$\\newcommand{\\sigmahat}{\\bar{\\boldsymbol{\\Sigma}}}$\n",
-        "$\\newcommand{\\bfsigma}{{\\boldsymbol{\\mathbf{\\Sigma}}}}$\n",
-        "$\\newcommand{\\xn}{{\\boldsymbol{\\mathbf{x}}_n}}$\n",
-        "$\\newcommand{\\bfx}{{\\boldsymbol{\\mathbf{x}}}}$\n",
-        "$\\newcommand{\\xei}{{\\boldsymbol{\\mathbf{x}}_i}}$\n",
-        "$\\newcommand{\\deltan}{{\\boldsymbol{\\mathbf{\\Delta}}_n}}$\n",
-        "$\\newcommand{\\deltai}{{\\boldsymbol{\\mathbf{\\Delta}}_i}}$\n",
-        "$\\newcommand{\\bfdelta}{{\\boldsymbol{\\mathbf{\\Delta}}}}$\n",
-        "$\\newcommand{\\M}{\\bar{\\boldsymbol{M}}}$\n",
-        "$\\newcommand{\\bfD}{{\\boldsymbol{\\mathbf{D}}}}$\n",
-        "$\\newcommand{\\bfI}{{\\boldsymbol{\\mathbf{I}}}}$\n",
-        "$\\newcommand{\\bfcX}{{\\boldsymbol{\\mathcal{X}}}}$\n",
-        "$\\renewcommand{\\vec}[1]{\\boldsymbol{#1}}$\n",
-        "$\\def\\matr#1{\\boldsymbol{\\mathbf{#1}}}$\n",
-        "$\\def\\tp{\\mathsf T}$\n",
-        "$\\newcommand{\\E}{\\mathbb{E}}$\n",
+        "\\newcommand{\\muhat}{\\boldsymbol{\\bar{x}}}\n",
+        "\\newcommand{\\ehat}{\\boldsymbol{\\bar{e}}}\n",
+        "\\newcommand{\\bsize}{\\mu}\n",
+        "\\newcommand{\\numbatches}{M}\n",
+        "\\newcommand{\\sigmahat}{\\bar{\\boldsymbol{\\Sigma}}}\n",
+        "\\newcommand{\\bfsigma}{\\boldsymbol{\\Sigma}}\n",
+        "\\newcommand{\\xn}{\\boldsymbol{x}_n}\n",
+        "\\newcommand{\\bfx}{\\boldsymbol{x}}\n",
+        "\\newcommand{\\xei}{\\boldsymbol{x}_i}\n",
+        "\\newcommand{\\deltan}{\\boldsymbol{\\Delta}_n}\n",
+        "\\newcommand{\\deltai}{\\boldsymbol{\\Delta}_i}\n",
+        "\\newcommand{\\bfdelta}{\\boldsymbol{\\Delta}}\n",
+        "\\newcommand{\\M}{\\bar{\\boldsymbol{M}}}\n",
+        "\\newcommand{\\bfD}{\\boldsymbol{D}}\n",
+        "\\newcommand{\\bfI}{\\boldsymbol{I}}\n",
+        "\\newcommand{\\bfcX}{\\boldsymbol{\\mathcal{X}}}\n",
+        "\\renewcommand{\\vec}[1]{\\boldsymbol{#1}}\n",
+        "\\def\\matr#1{\\boldsymbol{#1}}\n",
+        "\\def\\tp{\\mathsf{T}}\n",
+        "\\newcommand{\\E}{\\mathbb{E}}\n",
+        "\n",
         "\n",
         "## Incremental / Online Estimation of the (Inverse) Covariance Matrix and Mean  \n",
         "\n",
@@ -122,12 +123,12 @@
       "metadata": {
         "id": "tKGlBbp96l41"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "9558c759"
       },
@@ -294,12 +295,12 @@
       "metadata": {
         "id": "rpi3JpQEGBtE"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "de1ec306",
         "colab": {
@@ -339,7 +340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "f7008e38",
         "colab": {
@@ -432,7 +433,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "fbf7eba2"
       },
@@ -596,7 +597,7 @@
         "id": "XFWjnPrq-0VW",
         "outputId": "1396e85f-7fe6-4235-d96c-f223130a3374"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -609,7 +610,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "94bc419c",
         "colab": {
@@ -657,7 +658,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "81d60721",
         "colab": {
@@ -750,7 +751,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 447,
+      "execution_count": null,
       "metadata": {
         "id": "66708998"
       },
@@ -814,7 +815,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 448,
+      "execution_count": null,
       "metadata": {
         "id": "09fd8b8e",
         "colab": {
@@ -878,7 +879,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 449,
+      "execution_count": null,
       "metadata": {
         "id": "f0394753",
         "colab": {
@@ -916,7 +917,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 450,
+      "execution_count": null,
       "metadata": {
         "id": "61d6178c",
         "colab": {
