Mit Colab erstellt

--- a/2025_09_27_online_estimate_cov_mu.ipynb
+++ b/2025_09_27_online_estimate_cov_mu.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPb/Ch2F/HcI/4G8yezy/qs",
+      "authorship_tag": "ABX9TyPqQ5byWjAw7j16PvK+cQG9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,26 +29,28 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\\newcommand{\\muhat}{\\boldsymbol{\\bar{x}}}\n",
-        "\\newcommand{\\ehat}{\\boldsymbol{\\bar{e}}}\n",
-        "\\newcommand{\\bsize}{\\mu}\n",
-        "\\newcommand{\\numbatches}{M}\n",
-        "\\newcommand{\\sigmahat}{\\bar{\\boldsymbol{\\Sigma}}}\n",
-        "\\newcommand{\\bfsigma}{\\boldsymbol{\\Sigma}}\n",
-        "\\newcommand{\\xn}{\\boldsymbol{x}_n}\n",
-        "\\newcommand{\\bfx}{\\boldsymbol{x}}\n",
-        "\\newcommand{\\xei}{\\boldsymbol{x}_i}\n",
-        "\\newcommand{\\deltan}{\\boldsymbol{\\Delta}_n}\n",
-        "\\newcommand{\\deltai}{\\boldsymbol{\\Delta}_i}\n",
-        "\\newcommand{\\bfdelta}{\\boldsymbol{\\Delta}}\n",
-        "\\newcommand{\\M}{\\bar{\\boldsymbol{M}}}\n",
-        "\\newcommand{\\bfD}{\\boldsymbol{D}}\n",
-        "\\newcommand{\\bfI}{\\boldsymbol{I}}\n",
-        "\\newcommand{\\bfcX}{\\boldsymbol{\\mathcal{X}}}\n",
-        "\\renewcommand{\\vec}[1]{\\boldsymbol{#1}}\n",
-        "\\def\\matr#1{\\boldsymbol{#1}}\n",
-        "\\def\\tp{\\mathsf{T}}\n",
-        "\\newcommand{\\E}{\\mathbb{E}}\n",
+        "{% raw %}\n",
+        "$\\newcommand{\\muhat}{\\boldsymbol{\\bar{x}}}$\n",
+        "$\\newcommand{\\ehat}{\\boldsymbol{\\bar{e}}}$\n",
+        "$\\newcommand{\\bsize}{\\mu}$\n",
+        "$\\newcommand{\\numbatches}{M}$\n",
+        "$\\newcommand{\\sigmahat}{\\bar{\\boldsymbol{\\Sigma}}}$\n",
+        "$\\newcommand{\\bfsigma}{\\boldsymbol{\\Sigma}}$\n",
+        "$\\newcommand{\\xn}{\\boldsymbol{x}_n}$\n",
+        "$\\newcommand{\\bfx}{\\boldsymbol{x}}$\n",
+        "$\\newcommand{\\xei}{\\boldsymbol{x}_i}$\n",
+        "$\\newcommand{\\deltan}{\\boldsymbol{\\Delta}_n}$\n",
+        "$\\newcommand{\\deltai}{\\boldsymbol{\\Delta}_i}$\n",
+        "$\\newcommand{\\bfdelta}{\\boldsymbol{\\Delta}}$\n",
+        "$\\newcommand{\\M}{\\bar{\\boldsymbol{M}}}$\n",
+        "$\\newcommand{\\bfD}{\\boldsymbol{D}}$\n",
+        "$\\newcommand{\\bfI}{\\boldsymbol{I}}$\n",
+        "$\\newcommand{\\bfcX}{\\boldsymbol{\\mathcal{X}}}$\n",
+        "$\\renewcommand{\\vec}[1]{\\boldsymbol{#1}}$\n",
+        "$\\def\\matr#1{\\boldsymbol{#1}}$\n",
+        "$\\def\\tp{\\mathsf{T}}$\n",
+        "$\\newcommand{\\E}{\\mathbb{E}}$\n",
+        "{% endraw %}\n",
         "\n",
         "\n",
         "## Incremental / Online Estimation of the (Inverse) Covariance Matrix and Mean  \n",
