Mit Colab erstellt

--- a/2025_09_27_online_estimate_cov_mu.ipynb
+++ b/2025_09_27_online_estimate_cov_mu.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO8a83cnwghgyQPDYdQl/75",
+      "authorship_tag": "ABX9TyMj+iLCeL7zPFprBJZpVvUz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -414,7 +414,7 @@
         "\\cdots &\n",
         "\\bfx_{n} - \\muhat_n\n",
         "\\end{pmatrix}^\\tp \\\\\n",
-        "\\M_{n} &= \\lambda \\M_{n-\\bsize} + \\bfD_n^\\tp \\bfcX_n \\\\% \\sum_{i=k}^{n} \\deltai \\big(\\xei - \\muhat_n\\big)^\\tp \\\\\n",
+        "\\M_{n} &= \\lambda \\M_{n-\\bsize} + \\bfD_n^\\tp \\bfcX_n \\\\\n",
         "\\M_{n}^{-1} &= \\frac{1}{\\lambda} \\M_{n-\\bsize}^{-1} - \\frac{1}{\\lambda} \\M_{n-\\bsize}^{-1} \\bfD_n^\\tp\n",
         "\\Big(\\lambda \\bfI + \\bfcX_n \\M_{n-\\bsize}^{-1} \\bfD_n^\\tp \\Big)^{-1} \\bfcX_n \\M_{n-\\bsize}^{-1}\\\\\n",
         "\\sigmahat_n &= \\frac{\\M_{n}}{W_n}, \\ \\ \\sigmahat_n^{-1} = {W_n} \\M_{n}^{-1}.\n",
